[gd_scene load_steps=10 format=3 uid="uid://b8nnhuxywfm5r"]

[ext_resource type="Script" path="res://Unit/unit.gd" id="1_wpigb"]
[ext_resource type="Texture2D" uid="uid://druk1kswiiwhb" path="res://Textures/placeholder_unit.png" id="2_pfocc"]
[ext_resource type="Script" path="res://States/finite_state_machine.gd" id="3_d35hw"]
[ext_resource type="Script" path="res://States/Unit/UnitAttacking.gd" id="4_o5swc"]
[ext_resource type="Script" path="res://States/Unit/UnitMoving.gd" id="5_0mk6j"]
[ext_resource type="Script" path="res://States/Unit/UnitDying.gd" id="6_7fl40"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ks21n"]
radius = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvqkj"]
size = Vector2(35, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_t4ufg"]
radius = 160.0

[node name="Unit3Age2" type="CharacterBody2D"]
script = ExtResource("1_wpigb")

[node name="AttackRangeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea"]
shape = SubResource("CircleShape2D_ks21n")

[node name="UnitCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kvqkj")

[node name="EnemyDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_t4ufg")

[node name="PlaceholderTexture" type="Sprite2D" parent="."]
texture = ExtResource("2_pfocc")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -77.0
offset_right = 20.0
offset_bottom = -69.0
grow_horizontal = 2
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_d35hw")
initial_state = NodePath("UnitMoving")

[node name="UnitAttacking" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("4_o5swc")
unit = NodePath("../..")

[node name="UnitMoving" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("5_0mk6j")
unit = NodePath("../..")

[node name="UnitDying" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("6_7fl40")
unit = NodePath("../..")

[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
